--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
-
+/* ==========================================================================
 
 // Base Stylesheet - http://getbase.org
-
-
 
 *, *:before, *:after {
   box-sizing: border-box; }
