--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* ==========================================================================
 
-// Base Stylesheet - http://getbase.org
+// Base Stylesheet - http://getbase.org */
 
 *, *:before, *:after {
   box-sizing: border-box; }
